PROD/influxDB_deployment/influxdb-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-external
  namespace: default 
spec:
  selector:
    app: influxdb # This label should match your Jellyfin Deployment's pod labels
  ports:
    - protocol: TCP
      port: 80       # External port for the Service (what you connect to)
      targetPort: 8086 # Internal port of the container deployment
      name: http
  type: LoadBalancer 
  loadBalancerIP: 10.104.104.16 #target IP for the service.
#test to see if can direct to container deployment without specifing the port.
